<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailHospital"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name_hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="@string/hospital_name"/>

        <de.hdodenhof.circleimageview.CircleImageView
            tools:src="@color/colorAccent"
            android:id="@+id/img_hospital"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"/>

        <TextView
            android:text="@string/hospital_identity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_identity"
                    android:textColor="@color/colorFont"
                    android:layout_marginEnd="6dp"/>

                <TextView
                    android:id="@+id/tv_content_identity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/content_identity"
                    android:textColor="@color/colorFont"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:text="@string/hospital_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/tv_content_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_overview"
                    android:textColor="@color/colorFont"
                    android:layout_marginEnd="8dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>






    </LinearLayout>

</ScrollView>