<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    card_view:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_hospital"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent"/>

        <TextView
            android:id="@+id/tv_name_hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/img_hospital"
            tools:text="@string/hospital_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name_hospital"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:layout_above="@+id/layout_button"
            android:layout_toEndOf="@+id/img_hospital"
            android:ellipsize="end"
            android:layout_centerVertical="true"
            android:maxLines="4"
            android:textSize="14sp"
            android:textColor="@color/colorFont"
            android:text="@string/hospital_address"/>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/img_hospital">

            <Button
                android:id="@+id/btn_detail"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hospital_detail"
                android:textSize="16sp"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>